Task constructors repaired