@@ -78,6 +78,12 @@
                 <configuration>
                     <mainClass>mainpackage.Main</mainClass>
                     <options>
+                        <option>--add-modules</option><option>javafx.controls</option>
+                        <option>--add-modules</option><option>javafx.fxml</option>
+                        <option>--add-modules</option><option>javafx.graphics</option>
+                        <option>--add-modules</option><option>javafx.media</option>
+                        <option>--add-modules</option><option>javafx.web</option>
+
                         <option>--add-opens</option><option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                         <option>--add-opens</option><option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
                         <option>--add-opens</option><option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
@@ -106,6 +112,28 @@
                     <source>11</source>
                     <target>11</target>
                 </configuration>
+            </plugin>
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>mainpackage.JarMain</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
         </plugins>
